--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+########################################
+# Node / Next.js
+########################################
+node_modules/
+/.next/
+/out/
+/build/
+/dist/
 
-# dependencies
-/node_modules
+########################################
+# Package managers
+########################################
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,58 +18,63 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+########################################
+# Logs & reports
+########################################
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+/coverage
 
-# env files (can opt-in for committing if needed)
+########################################
+# Environment / hosting
+########################################
 .env*
-
-# vercel
+!.env.example
 .vercel
 
-# typescript
+########################################
+# TypeScript / build metadata
+########################################
 *.tsbuildinfo
 next-env.d.ts
 
-# Anchor
-/anchor/.anchor
-/anchor/target/debug
-/anchor/target/deploy
-/anchor/target/release
-/anchor/target/sbf-solana-solana
-/anchor/target/test-ledger
-/anchor/target/.rustc_info.json
-test-ledger
-**/*.rs.bk
-
-# Ignore node dependencies
-node_modules/
-
-# Ignore Rust build files (This is the big one!)
-target/
-
-# Ignore Anchor build files
-.anchor/
-test-ledger/
-
-# Ignore system files
+########################################
+# Editors / OS
+########################################
 .DS_Store
+.idea/
+.vscode/
+.history/
+
+########################################
+# Anchor / Rust artifacts
+########################################
+.anchor/
+anchor/.anchor/
+anchor/target/
+target/
 **/*.rs.bk
 *.so
+*.dll
+*.dylib
+
+########################################
+# Local validators & ledgers
+########################################
+anchor/test-ledger/
+test-ledger/
+*.keypair
+*.keypair.json
+*.key
+*.tar.zst
+*.tar.gz
+*.snap
+
+########################################
+# Misc secrets / certificates
+########################################
+*.pem
+*.der
